--- a/style/_purple-box.scss
+++ b/style/_purple-box.scss
@@ -32,7 +32,7 @@
     }
     @include desktop{
         text-align: left;
-        margin-left: $margin;
+        margin-left: 6rem;
     }
 }
 
@@ -80,10 +80,10 @@
         height: 40rem;
         width: 50rem;
     }
-    @include desktop{               //70,70
+    @include desktop{     //70,70
         height: 30rem;
         width: 30rem;
-        margin-right: $margin;
+        margin-right: 6rem;
     }
     
 }
@@ -146,7 +146,7 @@
 .geneva-castle{
     @include phone{
         top: 16rem;
-        left: 14rem;
+        left: 14.5rem;
         animation-name: geneva-castle-animation-phone;
     }
     @include desktop{
@@ -161,7 +161,7 @@
 
 @keyframes geneva-castle-animation-phone{
     0%{height: 25rem; width: 25rem; top: 0; left: 6rem;}
-    100%{height: 10rem; width: 10rem; top:16rem; left: 14rem;}
+    100%{height: 10rem; width: 10rem; top:16rem; left: 14.5rem;}
 }
 
 @keyframes geneva-castle-animation-desktop{
@@ -238,30 +238,35 @@
     animation-timing-function: ease-out;
     animation-play-state: paused;
     @include phone{
+        width: 11rem;
         animation-name: geneva-animation-phone;
+        transform: translateX(14rem) scale(1.25);
     }
     @include tablet{
+        width: 21rem;
         animation-name: geneva-animation-tablet;
+        transform: translateX(28rem) scale(1.25);
     }
     @include desktop{
+        width: 34rem;
         animation-name: geneva-animation-desktop;
-        transform: translateX(-5rem) scale(1.25);
+        transform: translateX(17rem) scale(1.25);
     }
     
 }
 @keyframes geneva-animation-phone{
     0%{transform: translateX(250rem) scale(0.75);}
-    100%{transform: translateX(0rem) scale(1.25);}
+    100%{transform: translateX(14rem) scale(1.25);}
 }
 
 @keyframes geneva-animation-tablet{
     0%{transform: translateX(600rem) scale(0.75);}
-    100%{transform: translateX(0rem) scale(1.25);}
+    100%{transform: translateX(28rem) scale(1.25);}
 }
 
 @keyframes geneva-animation-desktop{
     0%{transform: translateX(100rem) scale(0.75);}
-    100%{transform: translateX(-5rem) scale(1.25);}
+    100%{transform: translateX(17rem) scale(1.25);}
 }
 
 .purple-box:hover{
