--- a/style/_red-box.scss
+++ b/style/_red-box.scss
@@ -38,7 +38,7 @@
     @include desktop{
         height: $cityimageheightdesktop;
         width: $cityimagewidthdesktop;
-        margin-left: $margin;
+        margin-left: 6rem;
     }
 }*/
 
@@ -146,7 +146,7 @@
     }
     @include desktop{
         text-align: right;
-        margin-right: $margin;
+        margin-right: 6rem;
     }
 }
 
